unpackaged/main/default/objects/SDO_SFS_Field_Capacity__c/SDO_SFS_Field_Capacity__c.object-meta.xml
<CustomObject>
    <description>What: Field Capacity object. Who: Laura Bode. Used in Analytics Demo Tool</description>
    <label>Field Capacity</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Field Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Capacity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>