unpackaged/main/default/objects/SDO_SFS_Field_Capacity__c/fields/Forecasted_Demand__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Demand__c</fullName>
    <label>Forecasted Demand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>