unpackaged/main/default/objects/SDO_SFS_Field_Capacity__c/fields/Forecasted_Gap__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Gap__c</fullName>
    <formula>Forecasted_Capacity__c - Forecasted_Demand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>