unpackaged/main/default/objects/SDO_SFS_Field_Capacity__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Field Capacity</relationshipLabel>
    <relationshipName>Field_Capacity</relationshipName>
    <type>Lookup</type>
</CustomField>